--- a/index.html
+++ b/index.html
@@ -2,22 +2,18 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Electron heartOfblack</title>
-		
+		<title>61-PC直播</title>
+		<!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
+		<link rel="shortcut icon" href="favicon.ico">
+		<style>
+
+		</style>
 	</head>
 	<body>
-		<div id="first" style="background: red;width: 100px;height: 200px;">
+		<button id="copy">copy</button>
+
+		<script src="clip.js"></script>
 			
-		</div>
-		<input type="button" name="go" id="go" value="go" onclick="go()"/>
-		<script type="text/javascript">
-			
-			function go(){
-				
-				location.href='test.html'
-			}
-			
-			
-		</script>
+
 	</body>
 </html>
