--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<button id="copy">copy</button>
-
+		<button id="save">save</button>
 		<script src="clip.js"></script>
 			
 
