--- a/index.html
+++ b/index.html
@@ -10,10 +10,24 @@
 		</style>
 	</head>
 	<body>
+		<video style="width: 200px;height: 200px;"></video>
 		<button id="copy">copy</button>
 		<button id="save">save</button>
+		<button id="basic-noti">notification</button>
+		<button id="openUrl">open url</button>
+		<button id="clear">把文件放入垃圾箱</button>
 		<script src="clip.js"></script>
+		<div id="holder">
+				Drag your file here
+			  </div>
+			  
+			  <script>
+			const app=require('electron').remote.app;
+			console.log(app.getLocale())
+
 			
+
+			  </script>
 
 	</body>
 </html>
