--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 		<button id="basic-noti">notification</button>
 		<button id="openUrl">open url</button>
 		<button id="clear">把文件放入垃圾箱</button>
+		<button id="tray">系统托盘</button>
+		<button id="destroyTray">销毁系统托盘</button>
 		<script src="clip.js"></script>
 		<div id="holder">
 				Drag your file here
